[Changes 1.2c01]

* Fix overflow in say() when handling a maximum-length client message. (caf)

* Remove WANT_CHAN_NICK_SERV define and include network services commands 
  by default. (caf)

* Pass through externally-provided CPPFLAGS (reported by cpet). (caf)

* Don't set the mode on new channels until synched - this speeds up joining
  lots of channels at connect time if one of them is new, and reduces the
  chance of being flooded off the server. (caf)

* Correctly handle channel sync across multi-server. (caf)

* Fixes and improvements for channel logging. (caf)

* Use correct (MODECHAN and MODEUSER) display level for channel and user
  modes. (caf)

* Allow %- status format to handle max-length topics (reported by oxy). (caf)

* Add /FSET WOHIS_LOGGEDIN for services login info on hybrid, ratbox and
  ircu. (caf)

* Add sanity checking of incoming nicknames. (caf)

* /MV (massvoice) shouldn't send +v for already-voiced users. (caf)

* Fix lag check on recent 32 bit OpenBSD / NetBSD (reported by DJ). (caf)

* Fix key bindings that terminate with ^. (caf)

* Fix the $timer() scripting function. (caf)

* Fix the /TKB (timed kickban) command. (caf)

* Rewrite termcap/terminfo detection logic in configure and include term.h
  in term.c for the system definition of tparm().  This fixes a crash on
  NetBSD x86-64 (reported by jeezy), and should also ensure that terminfo
  is used in preference to termcap on NetBSD. (caf)

* Fix output when built against termcap. (caf)

* Fix STATUS_NOTIFY so that it appears in the right window. (caf)

* Improve robustness of status formats handling. (caf)

* Use system setenv() in preference to compat bsd_setenv(). (caf)

* Allow selection of alternate hashing methods with $crypt(). (caf)

* Improve the initial seeding of the randm() fallback RNG. (caf)

* Strengthen the cookie generation algorithm for /detach. (caf)

* RANDOM_SOURCE now only affects the rand() scripting function. (caf)
